# email-triage-env

./: Dockerfile  README.md  SPACES_README.md  email_triage_env.py  inference.py  openenv.yaml  pyproject.toml  requirements-client.txt  requirements.txt  run_local.py
server/: __init__.py  app.py  env.py  graders.py  main.py  models.py  tasks.py
